tests/paczka1/small_fuzzy/78101437.err
Error in line 2: BLnE8XwYAM A182 72,2
Error in line 5: C4cWauE5tSv A182 4,3
Error in line 8: C4cWauE5tSv A281 25,9
Error in line 13: 5d14RotuQV A281 76,6
